--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -5,5 +5,6 @@
     android:choiceMode="singleChoice"
     android:divider="@android:color/transparent"
     android:dividerHeight="0dp"
-    android:background="#cccc"
-    tools:context="sumrize.gazelle.com.sumrize.NavigationDrawerFragment" />
+    android:background="#ff390702"
+    tools:context="sumrize.gazelle.com.sumrize.NavigationDrawerFragment"
+    android:id="@+id/drawer_values_array" />
